--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>Gustavo P. Maia — Academic CV</title>
-<meta name="description" content="Gustavo P. Maia — PhD student in Astrobiology. Research, education, publications, and contact.">
+<meta name="description" content="Gustavo P. Maia — PhD student in Astrobiology">
 
 <style>
 :root{
@@ -35,69 +35,15 @@ body{
   margin:32px auto;
   padding:20px;
 }
-a{color:var(--accent);text-decoration:none}
-a:hover{text-decoration:underline}
-h2{margin:0 0 20px 0}
-
-/* ================= HERO ================= */
-.hero{
-  background:linear-gradient(180deg,rgba(255,255,255,.04),transparent);
-  padding:24px;
-  border-radius:var(--radius-lg);
-  margin-bottom:56px;
-}
-.hero-card{
-  display:flex;
-  gap:24px;
-  background:var(--card);
-  border:1px solid var(--border);
-  border-radius:var(--radius-lg);
-  padding:22px;
-}
-.avatar-img{
-  width:130px;height:130px;
-  border-radius:16px;
-  object-fit:cover;
-  box-shadow:var(--shadow);
-}
-.avatar-fallback{
-  width:130px;height:130px;
-  border-radius:16px;
-  background:linear-gradient(135deg,#0ea5a5,#60a5fa);
-  display:flex;align-items:center;justify-content:center;
-  font-weight:800;font-size:32px;color:#03131e;
-}
-.role{color:var(--muted);margin-bottom:10px}
-
-/* ================= SOCIAL LINKS ================= */
-.social-links{
-  display:flex;
-  gap:12px;
-  margin-top:12px;
-  flex-wrap:wrap;
-}
-.social-links a{
-  display:flex;
-  align-items:center;
-  gap:8px;
-  padding:8px 12px;
-  border-radius:10px;
-  background:rgba(255,255,255,.04);
-  font-weight:600;
-}
-
-/* ================= SECTIONS ================= */
 .section{margin-bottom:64px}
+h2{margin:0 0 20px}
 
-/* ================= TIMELINE ================= */
-.timeline{
-  position:relative;
-  padding-left:36px;
-}
+/* ===== TIMELINE ===== */
+.timeline{position:relative}
 .timeline::before{
   content:"";
   position:absolute;
-  left:12px;
+  left:32px;
   top:0;
   bottom:0;
   width:2px;
@@ -105,30 +51,28 @@ h2{margin:0 0 20px 0}
 }
 .timeline-item{
   position:relative;
-  margin-bottom:32px;
-  opacity:0;
-  transform:translateY(24px);
-  transition:opacity .6s ease, transform .6s ease;
-}
-.timeline-item.visible{
-  opacity:1;
-  transform:none;
+  display:flex;
+  align-items:flex-start;
+  margin-bottom:40px;
+  cursor:pointer;
 }
 .timeline-item::before{
   content:"";
   position:absolute;
-  left:-26px;
-  top:10px;
+  left:32px;
   width:14px;
   height:14px;
   border-radius:50%;
   background:var(--accent);
+  transform:translateX(-50%);
 }
 .timeline-card{
+  margin-left:64px;
   background:var(--card);
   border:1px solid var(--border);
   border-radius:var(--radius-md);
   padding:16px;
+  width:100%;
 }
 .timeline-header{
   display:flex;
@@ -141,77 +85,41 @@ h2{margin:0 0 20px 0}
   object-fit:contain;
 }
 .meta{font-size:13px;color:var(--muted)}
-.timeline-card p{margin:8px 0 0}
 
-/* ================= PUBLICATIONS ================= */
-.pub{
-  background:var(--card);
+/* ===== EXPERIENCE DETAILS ===== */
+.experience-details{
+  margin-top:14px;
+  background:rgba(255,255,255,.03);
   border:1px solid var(--border);
   border-radius:var(--radius-md);
-  padding:14px;
-  margin-bottom:14px;
-}
-.pub-title{font-weight:600}
-.pub-meta{font-size:13px;color:var(--muted)}
-
-/* ================= CONTACT ================= */
-.contact-grid{
+  padding:16px;
   display:grid;
-  grid-template-columns:1fr 380px;
-  gap:20px;
+  grid-template-columns:160px 1fr;
+  gap:16px;
+  opacity:0;
+  max-height:0;
+  overflow:hidden;
+  transform:translateY(-10px);
+  transition:.4s ease;
 }
-@media(max-width:900px){
-  .contact-grid{grid-template-columns:1fr}
+.experience-details.open{
+  opacity:1;
+  max-height:500px;
+  transform:none;
 }
-
-.card{
-  background:var(--card);
-  border:1px solid var(--border);
-  border-radius:var(--radius-md);
-  padding:18px;
-}
-.contact-item{
-  display:flex;
-  gap:12px;
-  align-items:center;
-  margin-bottom:12px;
-}
-.contact-item strong{font-weight:600}
-.btn{
-  display:inline-flex;
-  align-items:center;
-  gap:8px;
-  padding:8px 12px;
-  border-radius:10px;
-  background:linear-gradient(90deg,var(--accent),var(--accent-strong));
-  color:#04203a;
-  border:none;
-  cursor:pointer;
-  font-weight:600;
-}
-.btn.ghost{
-  background:transparent;
-  border:1px solid var(--border);
-  color:var(--accent);
-}
-
-form input, form textarea{
+.experience-details img{
   width:100%;
-  padding:10px;
+  height:120px;
+  object-fit:cover;
   border-radius:10px;
-  border:1px solid var(--border);
-  background:transparent;
-  color:inherit;
 }
-form textarea{min-height:120px}
-
-/* ================= REDUCED MOTION ================= */
-@media (prefers-reduced-motion: reduce){
-  .timeline-item{opacity:1;transform:none;transition:none}
+.experience-details p{
+  margin:0;
+  color:var(--muted);
+  font-size:14px;
 }
-
 @media(max-width:700px){
-  .hero-card{flex-direction:column;align-items:center;text-align:center}
+  .experience-details{grid-template-columns:1fr}
 }
 </style>
 </head>
@@ -219,161 +127,132 @@ form textarea{min-height:120px}
 <body>
 <div class="site">
 
-<!-- HERO -->
-<section class="hero">
-  <div class="hero-card">
-    <img src="images/avatar.jpg" alt="Gustavo Maia"
-      class="avatar-img"
-      onerror="this.style.display='none';this.nextElementSibling.style.display='flex'">
-    <div class="avatar-fallback" style="display:none">GM</div>
-
-    <div>
-      <h1>Gustavo Pinho Maia</h1>
-      <div class="role">PhD student in Chemistry (Astrobiology)</div>
-      <p>
-        Research on mechanochemical and shock-driven synthesis of organic molecules
-        relevant to prebiotic chemistry and the origin of life.
-      </p>
-
-      
-	<div class="social-links">
-	  <a href="https://orcid.org/0000-0001-5314-8816" target="_blank" rel="noopener noreferrer">
-		<img
-		  src="images/logos/orcid.png"
-		  alt=""
-		  width="20" height="20"
-		  class="icon"
-		  loading="lazy"
-		  referrerpolicy="no-referrer"
-		/>
-		<span class="label">ORCID</span>
-	  </a>
-
-	  <a href="https://www.linkedin.com/in/gustavopinhomaia" target="_blank" rel="noopener noreferrer">
-		<img
-		  src="images/logos/linkedin.png"
-		  alt=""
-		  width="20" height="20"
-		  class="icon"
-		  loading="lazy"
-		  referrerpolicy="no-referrer"
-		/>
-		<span class="label">LinkedIn</span>
-	  </a>
-
-	  <a href="https://www.researchgate.net/profile/Gustavo_Maia2" target="_blank" rel="noopener noreferrer">
-		<img
-		  src="images/logos/researchgate.png"
-		  alt=""
-		  width="20" height="20"
-		  class="icon"
-		  loading="lazy"
-		  referrerpolicy="no-referrer"
-		/>
-		<span class="label">ResearchGate</span>
-	  </a>
-	</div>
-    </div>
-  </div>
-</section>
-
-<!-- RESEARCH -->
+<!-- ================= EXPERIENCE ================= -->
 <section class="section">
-<h2>Research Interests</h2>
-<div class="card">
-  <p class="meta">
-    Mechanochemical energy and prebiotic synthesis; mechanochemical reactivity of ribonucleosides;
-    shock-induced transformation and degradation of organic molecules in extraterrestrial materials;
-    analytical approaches to organic matter in meteorites.
-  </p>
-</div>
-</section>
+<h2>Experience</h2>
 
-<!-- EDUCATION -->
-<section class="section">
-<h2>Education</h2>
 <div class="timeline">
 
+<!-- MNHN -->
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/mnhn.png" alt="MNHN">
+      <div>
+        <strong>Visiting Scientist</strong>
+        <div class="meta">Jan 2025 – Present · MNHN — IMPMC, France</div>
+      </div>
+    </div>
+    <div class="experience-details">
+      <img src="images/experience/mnhn.jpg" alt="">
+      <p>
+        Research collaboration at IMPMC focusing on mechanochemical and
+        shock-driven synthesis of prebiotic organic molecules under
+        planetary and extraterrestrial conditions.
+      </p>
+    </div>
+  </div>
+</div>
+
+<!-- NASA -->
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/nasa.png" alt="NASA">
+      <div>
+        <strong>Visiting Scientist</strong>
+        <div class="meta">Nov 2024 – Dec 2024 · NASA Goddard Space Flight Center, USA</div>
+      </div>
+    </div>
+    <div class="experience-details">
+      <img src="images/experience/nasa.jpg" alt="">
+      <p>
+        Experimental research in astrobiology and prebiotic chemistry,
+        collaborating with NASA teams on impact-driven synthesis and
+        molecular characterization.
+      </p>
+    </div>
+  </div>
+</div>
+
+<!-- IST -->
 <div class="timeline-item">
   <div class="timeline-card">
     <div class="timeline-header">
       <img src="images/logos/ist.png" alt="IST">
       <div>
-        <strong>PhD in Chemistry (Astrobiology)</strong>
-        <div class="meta">2023–2027 · Ongoing · Universidade de Lisboa — Instituto Superior Técnico</div>
+        <strong>Invited Assistant (University Teacher)</strong>
+        <div class="meta">Sep 2024 – Oct 2024 · Instituto Superior Técnico, Portugal</div>
       </div>
     </div>
-    <p><em>Mechanochemical energy and prebiotic synthesis</em></p>
+    <div class="experience-details">
+      <img src="images/experience/ist.jpg" alt="">
+      <p>
+        Teaching assistance in chemistry courses, supporting laboratory
+        classes, mentoring students, and contributing to academic assessment.
+      </p>
+    </div>
   </div>
 </div>
 
+<!-- ANEQ -->
 <div class="timeline-item">
   <div class="timeline-card">
     <div class="timeline-header">
-      <img src="images/logos/ist.png" alt="IST">
+      <img src="images/logos/aneq.png" alt="ANEQ">
       <div>
-        <strong>MSc in Chemistry</strong>
-        <div class="meta">2020–2022 · Concluded · Instituto Superior Técnico</div>
+        <strong>President of the Fiscal Council</strong>
+        <div class="meta">Jun 2021 – May 2022 · ANEQ, Portugal</div>
       </div>
     </div>
-    <p><em>Ribonucleoside stability and prebiotic synthesis</em></p>
+    <div class="experience-details">
+      <img src="images/experience/aneq.jpg" alt="">
+      <p>
+        Responsible for financial oversight, governance compliance,
+        and strategic supervision at the national level.
+      </p>
+    </div>
   </div>
 </div>
 
+<!-- UBI -->
 <div class="timeline-item">
   <div class="timeline-card">
     <div class="timeline-header">
       <img src="images/logos/ubi.png" alt="UBI">
       <div>
-        <strong>BSc in Industrial Chemistry</strong>
-        <div class="meta">2017–2020 · Universidade da Beira Interior</div>
+        <strong>Vice-President — UBIQUÍMICA</strong>
+        <div class="meta">Sep 2019 – Dec 2020 · University of Beira Interior</div>
       </div>
     </div>
-    <p><em>Optimization of quinoline N-oxide synthesis</em></p>
-  </div>
-</div>
-
-</div>
-</section>
-
-<!-- PUBLICATIONS -->
-<section class="section">
-<h2>Publications</h2>
-<div id="pub-list"></div>
-</section>
-
-<!-- CONTACT -->
-<section class="section">
-<h2>Contact</h2>
-<div class="contact-grid">
-
-<div class="card">
-  <div class="contact-item">
-    <strong>Email:</strong> <span id="emailValue">gustavopinho.maia(at)mnhn.fr</span>
-  </div>
-
-  <div style="display:flex;gap:10px;margin-bottom:16px">
-    <button class="btn" id="copyEmailBtn">Copy email</button>
-    <a class="btn ghost" id="downloadVcard" download="gustavo_maia.vcf">Download vCard</a>
-  </div>
-
-  <form id="contactForm" onsubmit="return handleContact(event)">
-    <input id="name" placeholder="Your name" required>
-    <input id="email" type="email" placeholder="Your email" required>
-    <input id="subject" placeholder="Subject" required>
-    <textarea id="message" placeholder="Message" required></textarea>
-    <div style="margin-top:10px;display:flex;gap:10px">
-      <button class="btn" type="submit">Send</button>
-      <button class="btn ghost" type="button" onclick="this.form.reset()">Clear</button>
+    <div class="experience-details">
+      <img src="images/experience/ubi.jpg" alt="">
+      <p>
+        Organization of academic events, student representation,
+        and coordination of scientific activities within the department.
+      </p>
     </div>
-  </form>
+  </div>
 </div>
 
-<div class="card">
-  <strong>Profiles</strong>
-  <p class="meta">
-    Full academic record, appointments, and addresses are available via CiênciaVitae and ORCID.
-  </p>
+<!-- OLDER -->
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/ramada.png" alt="Ramada Aços">
+      <div>
+        <strong>Professional Internship</strong>
+        <div class="meta">Jun 2014 – Jul 2014 · Ramada Aços, S.A., Portugal</div>
+      </div>
+    </div>
+    <div class="experience-details">
+      <img src="images/experience/ramada.jpg" alt="">
+      <p>
+        Early industrial experience in metallurgical processes,
+        quality control, and industrial safety.
+      </p>
+    </div>
+  </div>
 </div>
 
 </div>
@@ -381,68 +260,19 @@ form textarea{min-height:120px}
 
 </div>
 
-<!-- ================= SCRIPTS ================= -->
 <script>
-// Timeline animation
-const observer = new IntersectionObserver(entries=>{
-  entries.forEach(e=>{
-    if(e.isIntersecting){
-      e.target.classList.add("visible");
-      observer.unobserve(e.target);
-    }
-  });
-},{threshold:0.2});
-document.querySelectorAll(".timeline-item").forEach(i=>observer.observe(i));
+/* Toggle experience details */
+document.querySelectorAll(".timeline-item").forEach(item=>{
+  item.addEventListener("click",()=>{
+    const box=item.querySelector(".experience-details");
+    if(!box) return;
 
-// BibTeX + DOI
-fetch("publications.bib")
-.then(r=>r.text())
-.then(text=>{
-  const entries=text.split("@").slice(1);
-  const c=document.getElementById("pub-list");
-  entries.forEach(e=>{
-    const t=(e.match(/title\s*=\s*[{"]([^}"]+)/i)||[])[1];
-    const a=(e.match(/author\s*=\s*[{"]([^}"]+)/i)||[])[1];
-    const y=(e.match(/year\s*=\s*[{"]([^}"]+)/i)||[])[1];
-    const d=(e.match(/doi\s*=\s*[{"]([^}"]+)/i)||[])[1];
-    if(!t) return;
-    c.innerHTML+=`
-      <div class="pub">
-        <div class="pub-title">${t}</div>
-        <div class="pub-meta">${a||""}${y?" · "+y:""}</div>
-        ${d?`<a href="https://doi.org/${d}" target="_blank">DOI: ${d}</a>`:""}
-      </div>`;
+    document.querySelectorAll(".experience-details.open")
+      .forEach(b=>b!==box && b.classList.remove("open"));
+
+    box.classList.toggle("open");
   });
 });
-
-// vCard
-(function(){
-  const vcard=[
-    'BEGIN:VCARD','VERSION:3.0',
-    'FN:Gustavo P. Maia',
-    'EMAIL:gustavopinho.maia(at)mnhn.fr',
-    'URL:https://orcid.org/0000-0001-5314-8816',
-    'END:VCARD'
-  ].join('\r\n');
-  document.getElementById('downloadVcard').href=
-    'data:text/vcard;charset=utf-8,'+encodeURIComponent(vcard);
-})();
-
-// Copy email
-document.getElementById('copyEmailBtn').onclick=async()=>{
-  await navigator.clipboard.writeText(
-    document.getElementById('emailValue').textContent
-  );
-};
-
-// Contact form
-function handleContact(e){
-  e.preventDefault();
-  const s=encodeURIComponent(subject.value);
-  const b=encodeURIComponent(message.value);
-  location.href=`mailto:gustavopinho.maia@mnhn.fr?subject=${s}&body=${b}`;
-  return false;
-}
 </script>
 
 </body>
